# 2Pint-StifleR

./: Export-StiflerEventlogs.ps1  README.md
Baselines for Updating StifleR Client Settings/2X/: CB - Update StifleR Agent with new Server Name.cab
Beacon/: Add-StiflerBeaconToNetworkGroups.ps1
Client Health/2.6/: ClientHealth26.ps1
Client Health/Generic/: Invoke-StifleRClientCPUUsage.ps1
DO and BITS efficiency all Subnets/: Get-StiflerRSubnetBCEfficiencyInfo.ps1  Get-StiflerRSubnetDOEfficiencyInfo.ps1  Get-StiflerRSubnetPeerEfficiencyInfo.ps1
DumpStiflerWMI/: StifleR_wmidump.ps1
Examples/StiflerAdvScripting3.0/: GetWMI.ps1  RestGETExamples.ps1  RestPOSTExamples.ps1
GenerateLocationScripts/: GenerateLocationForBeaconTuning.ps1  Import-StifleRNetworkFromCSV.ps1  Import-StifleRNetworksSample.csv
InstallerScripts/Client/: README.md  StifleRDefaults.ini  StifleR_Client_Installer.ps1  StifleR_Client_Installer2.0.0.1
Maintenance/: Build-StifleRMaintenanceTasks.ps1  Invoke-StiflerClientDBCleanup.ps1  Set-2PXEAntiVirusExclusionsWindowsDefender.ps1  Set-StifleRAntiVirusExclusionsWindowsDefender.ps1  Set-iPXEWSAntiVirusExclusionsWindowsDefender.ps1  StifleR_Backup.ps1  StifleR_Resource_Manager.ps1
Managing StifleR Client Settings/: README.md
StifleRServerScriptsSnippets/: StifleRServerScriptsSnippets.sln
Troubleshoot/: Analyze-StiflerEventlogs.ps1  Enable-StiflerDebugEventlogs.ps1  Export-StiflerEventlogs.ps1  Get-BitsFlags.ps1  GetNetworkAdapter.ps1
frontend/: package.json
frontend/src-tauri/: Cargo.toml
frontend/src-tauri/src/: lib.rs
(+19 files in other folders)
